<resources>
    <string name="api_key"> AIzaSyA_PzQFAzM26Sz7LPg-Bowl2_JvxnPqxoc </string>
    <string name="app_name">Infinite Blackboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Prev_text">Prev</string>
    <string name="Next_text">Next</string>
    <string name="Home_text">Home</string>
    <string name="Displacement_text">Displacement</string>
    <string name="Speed_text">Speed</string>
    <string name="Velocity_text">Velocity</string>
    <string name="Acceleration_text">Acceleration</string>
    <string name="Graphs_text">Kinematics with Graphs</string>
    <string name="OneD_text">1-D Motion</string>
    <string name="TwoD_text">2-D Motion</string>
    <string name="Formulas_text">Formulas</string>
    <string name="Review_text">Review</string>
    <string name="Velocity_video">Velocity Video</string>
    <string-array name="sections">
    <item>Constant Velocity</item>
    <item>Constant Velocity Youtube Video</item>
    <item>Constant Velocity Q/A</item>
    <item>Average Velocity</item>
    <item>Average Velocity Youtube Video</item>
    <item>Average Velocity Q/A</item>
    <item>Speed</item>
    <item>Speed Youtube Video</item>
    <item>Speed Q/A</item>
    <item>Acceleration</item>
    <item>Acceleration Youtube Video</item>
    <item>Acceleration Q/A</item>
    <item>1-D Motion</item>
    <item>1-D Motion Youtube Video</item>
    <item>1-D Motion Q/A</item>
    <item>2-D Motion</item>
    <item>2-D Motion Youtube Video</item>
    <item>2-D Motion Q/A</item>
    </string-array>
    <string-array name="velocity">
        <item>Welcome! I would like to help you better understand Constant Velocity.</item>
        <item>Lets start with the definition of velocity.</item>
        <item>We say that velocity is defined as distance over time.</item>
        <item>Of course we mean the distance traveled over the time it takes to get there. So it\'s a change of time.</item>
        <item>We will see why it\'s important to think in terms of "the change of" in the definition when we talk about acceleration.</item>
        <item>Now, this certainly one way of defining velocity, but there is another way of saying the same thing.</item>
        <item>We could also say that the distance traveled is proportional to the time of travel, and velocity is the proportionality constant.</item>
        <item>Thinking of distance as the product of velocity and time allows us to visualize this idea with a picture we can draw on the blackboard.</item>
        <item>Let\'s start with trying to think about velocity in a different direction.</item>
        <item>Let\'s think of velocity as going upward. It\'s like the faster you go, the higher we are on the vertical axis.</item>
        <item>And then we think of time as going ogg to the right.</item>
        <item>Let\'s start with trying to think about velocity in a different direction.</item>
        <item>We can visualize all three things in just one picture drawn in two dimensions. Just as length as length times height is area in real space, velocity times time is distance in this particular way of looking at it.</item>
        <item>Let\'s look at an example. Suppose you are going 60 miles an hour. Of course that means you will go 60 miles in 60 minutes.</item>
        <item>... or one mile for each minute. Most people know that 60 miles per hour is also one mile per minute.</item>
        <item>But did you know that 60 miles per hour is also 88 feet per second?</item>
        <item>Anyway, we can think of this same velocity in terms of different distances...</item>
        <item>...depending on time. In a second you travel 88 feet.</item>
    </string-array>
    <string name="Vel_eq"><![CDATA[ Velocity=<sup>distance/</sup>time ]]></string>
    <string name="Vel5_eq"><![CDATA[ Distance= Velocity * time ]]></string>
    <string name="VelQA">What do you think the distance in the formula looks like in the our picture?</string>
    <string name="VelQA1">In less time you travel less distance. How far do you think you travel in 3/4 of a second?</string>
    <string name="VelQAa1">Area</string>
    <string name="VelQAa2">Volume</string>
    <string name="VelQAa3">Speed</string>
    <string name="VelQAa4">I don\'t know</string>
    <string name="VelQA1a1">88 ft</string>
    <string name="VelQA1a2">66 ft</string>
    <string name="VelQA1a3">44 ft</string>
    <string name="VelQA1a4">I don\'t know</string>
    <string-array name="speed">
        <item>Now we shall continue on to Speed and see how it is related to Velocity.</item>
        <item>First, we shall begin with the definition.</item>
        <item>Just as distance and displacement have small different meanings, although they are very similar, so do speed and velocity.</item>
        <item>Speed is a scalar quantity that refers to "how fast an object is moving."</item>
        <item>It can be thought of as the rate at which an object covers a specific distance.</item>
        <item>A fast-moving object has a high speed and covers a relatively large distance in a short amount of time.</item>
        <item>Whereas a slow-moving object that has a low speed, will only cover a relatively small amount of distance in the same amount of time.</item>
        <item>And of course an object with no movement at all has a zero speed, since you cannot measure the distance covered when it went no where at all.</item>
        <item>So in other words, as long as you make a movement in any direction, you build up speed.</item>
        <item>Like velocity, speed has the dimensions of length divided by time, and it is usually measured in meters per second or miles per hour.</item>
        <item>Here is an example. Say you\'re driving to a vacation get away, you traveled a total distance of 440 miles, and the trip took 8 hours. What was your speed?</item>
        <item>So using the formula of distance moved divided by time, you would place the total miles you drove (440 miles) and divide by the time it took you (8 hours).</item>
        <item>Don\'t forget to look at the units you are working with, in this case we are using miles per hour.</item>
        <item>So you complete the simple equation, dividing 440 by 8, and you should receive...</item>
        <item>... 55 miles per hour! So on your trip your speed averaged out to be about 55 miles per hour...</item>
        <item>... look at you, driving below the speed limit!</item>
        <item>Now this is not saying that you only went 55 miles an hour the entire time, but that you averaged at 55.</item>
        <item>Maybe you stopped for a bathroom break or some food, you also could have speed up at some points, maybe driving up to 70 miles an hour, but this is an example of Average Speed.</item>
        <item>Measuring speed can be broken down into 3 different areas: Average Speed, Instantaneous Speed, and Tangential Speed.</item>
    </string-array>
    <string name="Spd_eq"><![CDATA[ Speed = <sup>distance moved/</sup>time ]]></string>
    <string name="Spd2_eq"><![CDATA[ Distance = time * speed ]]></string>
    <string name="SpdQA">If Jane drives at an average speed of 45 mph on a journey of 135 miles, how long does the trip take?</string>
    <string name="SpdQA1">Chris cycles at an average speed of 8 mph, if he cycles for 6 1/2 hours, how far does he travel?</string>
    <string name="SpdQA2">Nikki has to travel a total of 351 miles. She travels the first 216 miles in 4 hours. What is her average speed for the first part of the journey?</string>
    <string name="SpdQA3">Looking back, Nikke noticed that her average speed was the same for the whole time, how long does the whole journey take then?</string>
    <string name="SpdQAa1">3 hours</string>
    <string name="SpdQAa2">5 hours</string>
    <string name="SpdQAa3">2 hours</string>
    <string name="SpdQAa4">8 hours</string>
    <string name="SpdQAAnswer">To find a time, we need to divide distance by speed.</string>
    <string name="SpdQA1a1">88 miles</string>
    <string name="SpdQA1a2">96 miles</string>
    <string name="SpdQA1a3">34 miles</string>
    <string name="SpdQA1a4">52 miles</string>
    <string name="SpdQA1Answer">To find a distance, we need to multiply speed by time.</string>
    <string name="SpdQA2a1">36 mph</string>
    <string name="SpdQA2a2">54 mph</string>
    <string name="SpdQA2a3">72 mph</string>
    <string name="SpdQA2a4">40 mph</string>
    <string name="SpdQA2Answer">To find average speed, we need to divide distance by time.</string>
    <string name="SpdQA3a1">8.0 hours</string>
    <string name="SpdQA3a2">3.5 hours</string>
    <string name="SpdQA3a3">6.5 hours</string>
    <string name="SpdQA3a4">5.0 hours</string>
    <string name="SpdQA3Answer">To find time, we need to divide distance by speed.</string>
    <string name="Acc"><![CDATA[ Velocity=<sup>distance/</sup>time ]]></string>
    <string name="Acc_eq"><![CDATA[ Velocity=<sup>distance/</sup>time ]]></string>
    <string name="Acc_eq1"><![CDATA[ Distance= Velocity * time ]]></string>
    <string name="Acc_0">Welcome! I would like to help you better understand Constant Velocity.</string>
    <string name="Acc_1">Lets start with the definition of velocity.</string>
    <string name="Acc_2">We say that velocity is defined as distance over time.</string>
    <string name="Acc_3">Of course we mean the distance traveled over the time it takes to get there. So it\'s a change of time.</string>
    <string name="Acc_4">We will see why it\'s important to think in terms of "the change of" in the definition when we talk about acceleration.</string>
    <string name="Acc_5">Now, this certainly one way of defining velocity, but there is another way of saying the same thing.</string>
    <string name="Acc_6">We could also say that the distance traveled is proportional to the time of travel, and velocity is the proportionality constant.</string>
    <string name="Acc_7">Thinking of distance as the product of velocity and time allows us to visualize this idea with a picture we can draw on the blackbord.</string>
    <string name="Acc_8">Let\'s start with trying to think about velocity in a different direction.</string>
    <string name="Acc_9">Let\'s think of velocity as going upward. It\'s like the faster you go, the higher we are on the vertical axis.</string>
    <string name="Acc_10">And then we think of time as going ogg to the right.</string>
    <string name="Acc_11">Let\'s start with trying to think about velocity in a different direction.</string>
    <string name="Acc_12">We can visualize all three things in just one picture drawn in two dimensions. Just as length as length times height is area in real space, velocity times time is distance in this particular way of looking at it.</string>
    <string name="Acc_13">Let\'s look at an example. Suppose you are going 60 miles an hour. Of course that means you will go 60 miles in 60 minutes.</string>
    <string name="Acc_14">... or one mile for each minute. Most people know that 60 miles per hour is also one mile per minute.</string>
    <string name="Acc_15">But did you know that 60 miles per hour is also 88 feet per second?</string>
    <string name="Acc_16">Anyway, we can think of this same velocity in terms of different distances...</string>
    <string name="Acc_17">...depending on time. In a second you travel 88 feet.</string>
    <string name="hometext">
    Please click the Start button to begin.
    </string>
    <string name="test_string">
    <![CDATA[ X<sup><small>2&theta</small></sup>&frac13; ]]>
    </string>
       <string name="disp_bb">
    <![CDATA[ displacement vs distance ]]>
    </string>
    <string name="twod_equation1">
        <![CDATA[ v<sub><small>f</small></sub> = v<sub><small>i</small></sub> + at ]]>
    </string>
</resources>