<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ConstantVelocityQAActivity"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:id="@+id/imageView"
                />


            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/imageView"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignBottom="@+id/imageView"
                android:layout_margin="5dp"
                android:gravity = "top|center"
                android:text="@string/test_string"
                android:textColor="#FEFEFA"
                android:textStyle="italic"
                />


            <TextView
                android:id="@+id/Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/imageView"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignBottom="@+id/imageView"
                android:layout_margin="5dp"
                android:gravity = "top|left"
                android:text="@string/test_string"
                android:textColor="#FEFEFA"
                android:textStyle="italic"
                />




            <ImageView
                android:id="@+id/imageViewtop"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignTop="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:gravity = "top|left"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/textView2"
                android:gravity = "top|right"
                android:enabled="false"
                android:visibility="invisible"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/imageViewtop"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/VelQA"
            android:textStyle="bold|italic" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="123dp"
                android:id="@+id/rdoGroup"
                android:minHeight="200dp"
                android:minWidth="200dp"
                android:focusableInTouchMode="false"
                android:nestedScrollingEnabled="true">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/VelQAa1"
                    android:id="@+id/radioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/VelQAa2"
                    android:id="@+id/radioButton2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/VelQAa3"
                    android:id="@+id/radioButton3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/VelQAa4"
                    android:id="@+id/radioButton4" />

            </RadioGroup>


        </ScrollView>

    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submit_button"
        android:layout_above="@+id/Previous_Button"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"

        />

    <Button
        android:id="@+id/Previous_Button"
        android:layout_width="fill_parent"
        android:text="@string/Prev_text"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_above="@+id/Home_button"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        >
    </Button>
    <Button
        android:text="@string/Home_text"
        android:id="@+id/Home_button"
        android:layout_above="@+id/Next_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        >
    </Button>

    <Button
        android:text="@string/Next_text"
        android:id="@+id/Next_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        >
    </Button>

</RelativeLayout>