<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ConstantVelocityActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#000000"
        android:layout_above="@+id/Previous_Button">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:id="@+id/imageView"
                />


            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/imageView"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignBottom="@+id/imageView"
                android:layout_margin="5dp"
                android:gravity = "top|center"
                android:text="@string/test_string"
                android:textColor="#FEFEFA"
                android:textStyle="italic"
                />
            <ImageView
                android:id="@+id/imageViewtop"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignTop="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:gravity = "top|left"
                />

        </RelativeLayout>



        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            >
            <TextView style="?android:textAppearanceMedium"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:text="none"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"/>
        </ScrollView>



    </LinearLayout>

    <Button
        android:id="@+id/Previous_Button"
        android:layout_width="fill_parent"
        android:text="@string/Prev_text"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_above="@+id/Home_button"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        >
    </Button>
    <Button
        android:text="@string/Home_text"
        android:id="@+id/Home_button"
        android:layout_above="@+id/Next_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        >
    </Button>

    <Button
        android:text="@string/Next_text"
        android:id="@+id/Next_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        >
    </Button>

</RelativeLayout>

