<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:id="@+id/imageView"
                />

            <include layout="@layout/score_tracker_layout"/>

        </RelativeLayout>

        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="What is the displacement of the cross-country team if they begin at the school, run 10 miles and finish back at the school?"
            android:textStyle="bold|italic" />

       

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="123dp"
            android:id="@+id/rdoGroup"
            android:minHeight="200dp"
            android:minWidth="200dp"
            android:focusableInTouchMode="false"
            android:nestedScrollingEnabled="false">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A. 0 miles"
                android:id="@+id/radioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B. 10 miles north"
                android:id="@+id/radioButton2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C. 10 miles"
                android:id="@+id/radioButton3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D. 8"
                android:id="@+id/radioButton4" />

        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView2"
            android:enabled="false"
            android:visibility="invisible"
            android:textStyle="bold" />




    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submit_button"
        android:layout_above="@+id/Previous_Button"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"

        />

    <Button
        android:id="@+id/Previous_Button"
        android:layout_width="fill_parent"
        android:text="@string/Prev_text"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_above="@+id/Home_button"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        >
    </Button>
    <Button
        android:text="@string/Home_text"
        android:id="@+id/Home_button"
        android:layout_above="@+id/Next_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        >
    </Button>

    <Button
        android:text="@string/Next_text"
        android:id="@+id/Next_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        >
    </Button>

</RelativeLayout>